--- a/template/style.css
+++ b/template/style.css
@@ -5,4 +5,9 @@ input {
 a {
 	text-decoration: none;
 	color: black;
+  display: inline-block;
+  padding: 20px;
+  border: 1px solid black;
+  border-radius: 2px;
+  
 }
