--- a/template/style.css
+++ b/template/style.css
@@ -1,13 +1,18 @@
+body {
+  background-color: #333;
+}
+
 input {
 	display: block;
 }
 
 a {
 	text-decoration: none;
-	color: black;
+	color: white;
   display: inline-block;
   padding: 20px;
   border: 1px solid black;
   border-radius: 2px;
+  border-color: white;
   
 }
