--- a/template/style.css
+++ b/template/style.css
@@ -2,10 +2,6 @@ body {
   background-color: #333;
 }
 
-input {
-	display: block;
-}
-
 a {
 	text-decoration: none;
 	color: white;
@@ -15,4 +11,19 @@ a {
   border-radius: 2px;
   border-color: white;
   
+}
+
+/* style for forms */
+
+*:focus {
+  outline: none;
+}
+
+input {
+	display: block;
+  margin-bottom: 10px;
+  width: 200px;
+  height: 30px;
+  border-radius: 5px;
+  box-shadow: inset 0 0 5px rgba(0,0,0,.5);
 }
